--- a/SentiMate/Base.lproj/Main.storyboard
+++ b/SentiMate/Base.lproj/Main.storyboard
@@ -172,45 +172,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xcj-jI-g57">
-                                <rect key="frame" x="20" y="269" width="353" height="460"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcj-jI-g57">
+                                <rect key="frame" x="35" y="251.33333333333334" width="323" height="477.66666666666663"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQk-x0-BBE">
-                                        <rect key="frame" x="30" y="148.33333333333337" width="293" height="179.33333333333337"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQk-x0-BBE">
+                                        <rect key="frame" x="30" y="99.999999999999986" width="263" height="201.66666666666663"/>
                                         <string key="text">遇到職場鬼故事，那個主管真的很討厭！今天又幫他背鍋了！！有點想離職，可是我才剛入職三個月，為什麼他要這樣啊QQ 遇到職場鬼故事，那個主管真的很討厭！今天又幫他背鍋了！！有點想離職，可是我才剛入職三個月，為什麼他要這樣啊 TAT 遇到職場鬼故事，那個主管真的很討厭！</string>
                                         <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gvf-oO-tJh">
-                                        <rect key="frame" x="20" y="138.33333333333326" width="313" height="301.66666666666674"/>
-                                    </view>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="sad" translatesAutoresizingMaskIntoConstraints="NO" id="9qh-aB-GeK">
-                                        <rect key="frame" x="140" y="34" width="72" height="74"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sad" translatesAutoresizingMaskIntoConstraints="NO" id="9qh-aB-GeK">
+                                        <rect key="frame" x="136.66666666666666" y="29.999999999999972" width="50" height="50"/>
                                         <color key="tintColor" red="1" green="0.79215686269999996" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="9qh-aB-GeK" secondAttribute="height" multiplier="109:108" id="5uR-fr-XET"/>
+                                            <constraint firstAttribute="height" constant="50" id="gw0-hZ-uR4"/>
+                                            <constraint firstAttribute="width" constant="50" id="pCh-h0-p70"/>
+                                            <constraint firstAttribute="width" secondItem="9qh-aB-GeK" secondAttribute="height" multiplier="1:1" id="qfd-be-xXu"/>
                                         </constraints>
                                     </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="memo5" translatesAutoresizingMaskIntoConstraints="NO" id="Vtq-Lq-ewW">
+                                        <rect key="frame" x="-2" y="424.66666666666663" width="275" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="sck-7a-6uT"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tape3" translatesAutoresizingMaskIntoConstraints="NO" id="6JJ-sr-wSG">
+                                        <rect key="frame" x="-16" y="394.66666666666663" width="183" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="abo-Dr-ZfP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tape1" translatesAutoresizingMaskIntoConstraints="NO" id="vIR-eC-dAM">
+                                        <rect key="frame" x="219.66666666666666" y="-18" width="119.33333333333334" height="87.666666666666671"/>
+                                    </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
-                                    <constraint firstItem="fQk-x0-BBE" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="30" id="0um-jG-A1l"/>
-                                    <constraint firstAttribute="bottom" secondItem="Gvf-oO-tJh" secondAttribute="bottom" constant="20" id="bvT-Yh-Dsw"/>
-                                    <constraint firstItem="Gvf-oO-tJh" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="20" id="hG2-Mg-qi1"/>
-                                    <constraint firstAttribute="trailing" secondItem="Gvf-oO-tJh" secondAttribute="trailing" constant="20" id="lNz-Cp-VzE"/>
-                                    <constraint firstAttribute="trailing" secondItem="fQk-x0-BBE" secondAttribute="trailing" constant="30" id="nCX-eQ-ZsB"/>
+                                    <constraint firstItem="fQk-x0-BBE" firstAttribute="top" secondItem="9qh-aB-GeK" secondAttribute="bottom" constant="20" id="7R7-V3-qZk"/>
+                                    <constraint firstItem="6JJ-sr-wSG" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="-16" id="Ff7-nJ-Qgb"/>
+                                    <constraint firstItem="vIR-eC-dAM" firstAttribute="top" secondItem="xcj-jI-g57" secondAttribute="top" constant="-18" id="Q21-0f-UyT"/>
+                                    <constraint firstAttribute="trailing" secondItem="6JJ-sr-wSG" secondAttribute="trailing" constant="156" id="Vfw-dL-nQN"/>
+                                    <constraint firstItem="Vtq-Lq-ewW" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="-2" id="Ydf-II-CTj"/>
+                                    <constraint firstItem="fQk-x0-BBE" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="30" id="aFw-2J-utq"/>
+                                    <constraint firstAttribute="trailing" secondItem="vIR-eC-dAM" secondAttribute="trailing" constant="-16" id="bIC-cQ-qwN"/>
+                                    <constraint firstAttribute="bottom" secondItem="Vtq-Lq-ewW" secondAttribute="bottom" constant="-17" id="fBN-Pe-EHw"/>
+                                    <constraint firstItem="9qh-aB-GeK" firstAttribute="top" secondItem="xcj-jI-g57" secondAttribute="top" constant="30" id="fkl-xl-exV"/>
+                                    <constraint firstItem="vIR-eC-dAM" firstAttribute="leading" secondItem="9qh-aB-GeK" secondAttribute="trailing" constant="33.329999999999998" id="jbK-GT-snJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="fQk-x0-BBE" secondAttribute="trailing" constant="30" id="kQ7-jU-zpd"/>
+                                    <constraint firstAttribute="bottom" secondItem="6JJ-sr-wSG" secondAttribute="bottom" constant="8" id="maD-RU-QCu"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vtq-Lq-ewW" secondAttribute="trailing" constant="50" id="qJs-HZ-Agd"/>
+                                    <constraint firstItem="9qh-aB-GeK" firstAttribute="centerX" secondItem="xcj-jI-g57" secondAttribute="centerX" id="rGh-he-Qyb"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2024/04/15" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXA-T3-krg">
-                                <rect key="frame" x="35" y="134" width="78.666666666666671" height="19.666666666666671"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2024/04/15" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXA-T3-krg">
+                                <rect key="frame" x="35" y="133" width="323" height="19.666666666666657"/>
                                 <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
                                 <color key="textColor" red="0.93333333330000001" green="0.8862745098" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uX7-53-sKc">
-                                <rect key="frame" x="35" y="165" width="208" height="36.666666666666657"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uX7-53-sKc">
+                                <rect key="frame" x="35" y="164.66666666666666" width="208" height="36.666666666666657"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="因為" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2vj-YJ-3j0">
                                         <rect key="frame" x="0.0" y="0.0" width="52" height="36.666666666666664"/>
@@ -242,15 +264,21 @@
                         <viewLayoutGuide key="safeArea" id="8sV-HC-Kl5"/>
                         <color key="backgroundColor" red="0.1764705882" green="0.1960784314" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="xcj-jI-g57" firstAttribute="leading" secondItem="8sV-HC-Kl5" secondAttribute="leading" constant="20" id="OYj-LS-GwV"/>
-                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="bottom" secondItem="xcj-jI-g57" secondAttribute="bottom" constant="40" id="fHt-af-JIl"/>
-                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="trailing" secondItem="xcj-jI-g57" secondAttribute="trailing" constant="20" id="iFJ-EE-j3D"/>
+                            <constraint firstItem="xcj-jI-g57" firstAttribute="leading" secondItem="8sV-HC-Kl5" secondAttribute="leading" constant="35" id="4VQ-HC-L8p"/>
+                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="trailing" secondItem="OXA-T3-krg" secondAttribute="trailing" constant="35" id="9lb-JC-NOl"/>
+                            <constraint firstItem="OXA-T3-krg" firstAttribute="top" secondItem="8sV-HC-Kl5" secondAttribute="top" constant="30" id="Qtq-kK-8g3"/>
+                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="bottom" secondItem="xcj-jI-g57" secondAttribute="bottom" constant="40" id="RQx-Dy-cCI"/>
+                            <constraint firstItem="OXA-T3-krg" firstAttribute="leading" secondItem="8sV-HC-Kl5" secondAttribute="leading" constant="35" id="Tj2-Gj-s2Z"/>
+                            <constraint firstItem="uX7-53-sKc" firstAttribute="leading" secondItem="8sV-HC-Kl5" secondAttribute="leading" constant="35" id="Vjm-Jp-Ye2"/>
+                            <constraint firstItem="uX7-53-sKc" firstAttribute="top" secondItem="OXA-T3-krg" secondAttribute="bottom" constant="12" id="okw-RT-PXK"/>
+                            <constraint firstItem="xcj-jI-g57" firstAttribute="top" secondItem="uX7-53-sKc" secondAttribute="bottom" constant="50" id="sSn-YT-mJh"/>
+                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="trailing" secondItem="xcj-jI-g57" secondAttribute="trailing" constant="35" id="sXp-Qg-gq4"/>
+                            <constraint firstItem="8sV-HC-Kl5" firstAttribute="trailing" secondItem="uX7-53-sKc" secondAttribute="trailing" constant="150" id="w7f-EI-cq6"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fe5-nz-QIv"/>
                     <connections>
                         <outlet property="categoryLbl" destination="B47-fg-HzD" id="E1W-m0-0UT"/>
-                        <outlet property="contentBorderView" destination="Gvf-oO-tJh" id="Pf8-xA-9cb"/>
                         <outlet property="contentLbl" destination="fQk-x0-BBE" id="DP3-ru-vbc"/>
                         <outlet property="dateLbl" destination="OXA-T3-krg" id="PBX-Jt-ETW"/>
                         <outlet property="emotionImg" destination="9qh-aB-GeK" id="Li7-bO-QDG"/>
@@ -885,12 +913,14 @@
         <image name="forward.fill" catalog="system" width="128" height="77"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
+        <image name="memo5" width="878" height="171"/>
         <image name="play" catalog="system" width="117" height="128"/>
         <image name="play.fill" catalog="system" width="117" height="128"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
         <image name="sad" width="96" height="96"/>
         <image name="tape1" width="157" height="87.666664123535156"/>
+        <image name="tape3" width="488" height="220"/>
         <image name="testImage" width="464" height="466"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
